--- a/public/css/Style.css
+++ b/public/css/Style.css
@@ -4,6 +4,50 @@
     border: 0;
     box-sizing: border-box;
 }
+
+@media screen and (max-width: 480px){
+
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px){
+    
+}
+
+@media screen and (min-width: 769px) and (max-width: 1199px){
+    
+}
+
+@media screen and (min-width: 1200px){
+    input[type='email'],input[type='password']{
+        
+    }
+
+    .fundo{
+        position: absolute;
+        top:0;
+        left:0;
+        width: 100%;
+        height:100%;
+        background: url('/public/img/books.jpg') center center no-repeat;
+        background-size: cover;
+    }
+    
+    .login{
+        position: absolute;
+        width: 30%;
+        top: 50%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%,-50%);
+        background: #fff;
+        padding:30px;
+    }
+    .loginForm{
+        float:left;
+        width:100%;
+    }
+}
+
 body{
     width: 100%;
     height: 500px;
@@ -44,3 +88,4 @@ img{
 .Nav a{
     color:#fff;
 }
+
