--- a/public/css/Style.css
+++ b/public/css/Style.css
@@ -5,13 +5,14 @@
     box-sizing: border-box;
     font-family: Arial, sans-serif;
 }
-a{text-decoration: none; color: #333;}
-
+a{text-decoration: none; color: #0067b0;}
 /*Classes auxiliares*/
-.float{
+.floatL{
     float:left;
 }
-
+.floatR{
+    float: right;
+}
 .w100{
     width: 100%;
 }
@@ -34,7 +35,7 @@ input[type='email'],input[type='password']{
 }
 input[type='submit']{ 
     width: 30%;
-    background: #117190; 
+    background: #0067b8; 
     font-weight: bold; 
     color: #fff; 
     border: none; 
@@ -45,6 +46,10 @@ input[type='submit']:hover{
     opacity: 0.8;
 }
 
+h1{
+    margin-top:10px;
+    color: #404040;
+}
 .fundo{ 
     position:absolute; 
     top: 0; 
@@ -57,20 +62,21 @@ input[type='submit']:hover{
 
 .login{ 
     position: absolute; 
-    width: 30%; 
+    width: 35%;
     top: 50%; 
     left: 50%; 
     margin-right: -50%; 
     transform: translate(-50%,-50%); 
     background: #fff;
     padding: 30px;
-    border-radius: 2px; 
+    border-radius: 5px; 
 }
     
     .loginTextos{ 
         width: 80%; 
         font-weight: bold; 
-        line-height:40px; 
+        line-height:40px;
+        font-size: .8125rem; 
     }
 
 
@@ -167,7 +173,7 @@ img{
     width:100%;
 }
 
-.Footer{
+#footer{
     position:absolute;
     top:100%;
     width: 100%;
