--- a/public/css/Style.css
+++ b/public/css/Style.css
@@ -189,7 +189,7 @@ img{
     text-align: center;
     font-size: 20px;
 }
-#Nav{
+nav{
     float:left;
     width: 100%;
     background: #8eb5e4;
@@ -198,7 +198,7 @@ img{
     height: 50px;
     padding-top:10px;
 }
-#Nav a{
+nav a{
     color:#fff;
 }
 
