--- a/public/css/Style.css
+++ b/public/css/Style.css
@@ -132,6 +132,90 @@ nav{
         color:#fff;
     }
 
+.sidenav {
+    height: 100%;
+    width: 17%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    padding-top: 20px;
+}
+    .sidenav a {
+        padding: 6px 6px 6px 32px;
+        text-decoration: none;
+        font-size: 25px;
+        color: #818181;
+        display: block;
+    }
+    .sidenav a:hover {
+        color: #f1f1f1;
+    }
+
+.Content{
+    float: right;
+    width: 83%;
+    padding: 15px;
+    margin-left: 200px;
+}
+.Resultado{
+    display: none;
+    float:left;
+    width:70%;
+    border: 2px solid #00ff0d;
+    background: #d8ffd5;
+    text-align: center;
+    padding: 15px;
+    margin: 20px 15% 10px 15%;
+}
+
+.Formulario{
+    float:left; 
+    width:70%;
+}
+    .FormularioInput{
+        float:left; 
+        width:50%; 
+        padding: 0 5%;
+    }
+    .FormularioInput100{
+        width: 50% !important;
+    }
+    .FormularioInput input[type="text"], .FormularioInput select{
+        width:100%; 
+        height: 45px;
+    }
+    .FormularioInput input[type="submit"]{
+        display: inline-block;
+        padding: 15px 35px;
+        margin: 15px 0;
+        border: 0;
+        cursor: pointer;
+        background: #f0d800;
+        color: #fff;
+        font-weight: bold;
+        text-align: center;
+        border-radius: 10px;
+    }
+
+.TabelaCrud{width:100%;
+        text-align: center;
+    }
+    .TabelaCrud tr:nth-child(2n -1){
+        background: #CCC; 
+    }
+    .TabelaCrud tr:first-child{
+        background: #000;
+        color: White;
+        font-weight: bold;
+        font-size: 20px;
+    }
+    .TabelaCrud td{
+        width:25%;
+    }
+        
 
 /* Extra-Small */
 @media screen and (max-width: 480px){
