--- a/public/css/Style.css
+++ b/public/css/Style.css
@@ -65,9 +65,8 @@ h1{
     background-size: cover; 
 }
 
-.login, .cadastro{ 
+.login,.cadastro{ 
     position: absolute; 
-    width: 25%;
     top: 50%; 
     left: 50%; 
     margin-right: -50%; 
@@ -76,6 +75,14 @@ h1{
     padding: 30px;
     border-radius: 5px; 
 }
+
+.cadastro{
+    width: 40%;
+}
+.login{
+    width: 25%;
+}
+
     
     .loginTextos{ 
         width: 80%; 
@@ -170,51 +177,6 @@ nav{
     padding: 15px;
     margin: 20px 15% 10px 15%;
 }
-
-.Formulario{
-    float:left; 
-    width:70%;
-}
-    .FormularioInput{
-        float:left; 
-        width:50%; 
-        padding: 0 5%;
-    }
-    .FormularioInput100{
-        width: 50% !important;
-    }
-    .FormularioInput input[type="text"], .FormularioInput select{
-        width:100%; 
-        height: 45px;
-    }
-    .FormularioInput input[type="submit"]{
-        display: inline-block;
-        padding: 15px 35px;
-        margin: 15px 0;
-        border: 0;
-        cursor: pointer;
-        background: #f0d800;
-        color: #fff;
-        font-weight: bold;
-        text-align: center;
-        border-radius: 10px;
-    }
-
-.TabelaCrud{width:100%;
-        text-align: center;
-    }
-    .TabelaCrud tr:nth-child(2n -1){
-        background: #CCC; 
-    }
-    .TabelaCrud tr:first-child{
-        background: #000;
-        color: White;
-        font-weight: bold;
-        font-size: 20px;
-    }
-    .TabelaCrud td{
-        width:25%;
-    }
         
 
 /* Extra-Small */
